<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prontopass</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="forgotpassword">Forgot Password?</string>
    
    <string name="password">Password</string>
    <string name="repassword">Re-enter password</string>
    <string name="email">Email</string>
    <string name="mobnumber">Mobile</string>
    <string name="student_name">Enter Name</string>
    <string name="student_dob">Enter D.O.B</string>
    <string name="qualification">Enter Qualification</string>
    <string name="address">Enter Address</string>
    
    
    

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Maths</item>
        <item>Science</item>
        <item>English</item>
        <item>Aptitude</item>
        <item>Logical Reasoning</item>
        <item>Biology</item>
        <item>LOGOUT</item>
        
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_logout</item>
        
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string-array name="maths_subtopics">
        <item>M1</item>
        <item>M2</item>
        <item>M3</item>
        
    </string-array>
    <string-array name="science_subtopics">
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
        
    </string-array>
    <string-array name="english_subtopics">
        <item>E1</item>
        <item>E2</item>
        <item>E3</item>
        
    </string-array>
    <string-array name="aptitude_subtopics">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
        
    </string-array>
    <string-array name="logical_subtopics">
        <item>L1</item>
        <item>L2</item>
        <item>L3</item>
       
    </string-array>
    <string-array name="biology_subtopics">
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
       
    </string-array>

</resources>